--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,5 +1,5 @@
 
-<!-- <div class="container-fluid">
+ <div class="container-fluid">
     <div class="row">
         <form #quoteForm='ngForm' (ngSubmit)="addquote()">
             <div class="form-group">
