Added quotes array

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -2,8 +2,8 @@
   
 
 
-<!-- <div class="container"> -->
-  <!-- <div class="jumbotron">
+<div class="container">
+  < <div class="jumbotron">
  <h1>Quotes</h1>
  </div>
   <div *ngFor='let quote of quotes;let i=index'>
@@ -19,5 +19,5 @@
 
 
 <p *ngIf='quotes.length > 3'>I have too many quotes</p>
- <app-quote-form (savequote)="addquote($event)"></app-quote-form>  -->
-<!-- </div> -->
+ <app-quote-form (savequote)="addquote($event)"></app-quote-form> 
+</div>
