Added a p for quote description

--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -1,6 +1,6 @@
 
-<!-- <p>{{quote.description}}</p>
-  <p>This quote has existed for  {{quote.completeDate|dateCount}} days</p>
-<button class="btn btn-danger" (click) = 'quoteDelete(true)'> Delete Quote </button> -->
-
+ <p>{{quote.description}}</p>
+ 
+  <!-- <p>This quote has existed for  {{quote.completeDate|dateCount}} days</p>
+<button class="btn btn-danger" (click) = 'quoteDelete(true)'> Delete Quote </button -->
 
