--- a/src/app/quote-details/quote-details.component.html
+++ b/src/app/quote-details/quote-details.component.html
@@ -2,5 +2,5 @@
  <p>{{quote.description}}</p>
  
    <p>This quote has existed for  {{quote.completeDate|dateCount}} days</p>
-<!-- <button class="btn btn-danger" (click) = 'quoteDelete(true)'> Delete Quote </button> -->
+<button class="btn btn-danger" (click) = 'quoteDelete(true)'> Delete Quote </button>
 
