--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,9 +1,5 @@
-
-  
-
-
 <div class="container">
-  < <div class="jumbotron">
+   <div class="jumbotron">
  <h1>Quotes</h1>
  </div>
   <div *ngFor='let quote of quotes;let i=index'>
